# cds.pyreadme

./: .gitignore  LICENSE.txt  README.md  core.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
cdspyreadme/: CDSColumn.py  ReadMe.template  __init__.py  core.py  core_test.py
cdspyreadme.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cdspyreadme/: CDSColumn.py  MRT.template  ReadMe.template  __init__.py  bytebybyte.template  core.py  core_test.py
tests/: table.ascii  table.ascii.tmp  table.csv  table.mrt  table.vot
